# ambf_walker

./: .gitignore  CMakeLists.txt  package.xml  setup.py  setup.sh
Controller/: ControlServer.py  ControllerNode.py  ControllerServer.py  ExoControllerServer.py  HumanControllerServer.py
FSM/: ExoFSM.py  ExoHumanFSM.py  FSMHumanNode.py  FSMNode.py  ForwardLegState.py  InitializeState.py  InitilizeHumanState.py  LowerState.py  MainState.py  PremaSimState.py  RaiseLegState.py  RightForwardLegState.py  StepState.py  WalkInitState.py  WalkSimulinkState.py  WalkState.py  iLQRState.py  testState.py
Main/: Follow.py  FollowTraj.py  TransformFrames.py
Main/Exo/: Basic.py  Basic_server.py
Main/ExoHuman/: Basic_Lumped.py  HumanBasic.py  HumanPerfectModel.py  Lumped_FSM.py  StairPosition.py
Model/: ExoSub.py  Exoskeleton.py  ExoskeletonServer.py  Human.py  HumanServer.py  Model.py  ModelServer.py  Models.py
Muscles/: RienerMuscles.py
StateMachines/: StateMachine.py  States.py  TestStates.py
StateMachines2/: InitializeState.py  WalkInitState.py  WalkState.py
Testing/: joint_angle.csv  make_CSV_joints.py  record_ilqr.sh  timming_test_python.py
Train/: PolyTrain.py  TrainJoint2.py  optmization_test.py
Utlities/: trajectories.py  utlities.py
ambf_models/: simulate.sh  wrench_sub.py  wrench_sub_v2.py  wrench_subscriber.py
ambf_models/TESTING/: test.yaml
ambf_models/exo_v4/: exo_v4.yaml
ambf_models/exohuman_sensors/: exohuman_sensor.sh  exohuman_sensor.yaml
ambf_models/exohuman_v3/: exohuman_v3.yaml
ambf_models/exohuman_v4/: exohuman_v4.sh  exohuman_v4.yaml
ambf_models/exohuman_v5/: exohuman_v5.sh  exohuman_v5.yaml  exohuman_v5.yaml.old
ambf_models/exohuman_v6/: default.yaml  default.yaml.old  exohuman_v6.sh  exohuman_v6.yaml  exohuman_v6.yaml.old
ambf_models/human/: default.yaml  default.yaml.old
ambf_models/human2/: default.yaml
ambf_models/human_lumped/: lumped.yaml
ambf_models/lumped/: lumped.yaml  lumped.yaml.old
ambf_models/simulator/: exo.yaml
ambf_models/stair/: exo_stair.sh  exohuman_stair.sh  stairs.yaml
bag/: sim_loop_dt.bag  sim_loop_dt2.bag  sim_loop_dt3.bag  sim_loop_dt4.bag
config/: opt_test.pickle  tau_human.npy  tau_human2.npy  train_angle_rad.py
config/plotjuggler/: exohuman.xml
docker/: Dockerfile  docker-compose.yml
include/ambf_walker/: DynController.h
launch/: Baisc.launch  Basic_server.launch  CooPController.launch  Launch_C++.launch  Lumped_FSM.launch  Lumped_Server.launch  PerfectHuman.launch  exohuman.launch  exohuman_stair.launch  lumped_mass.launch
matlab/: Copy_of_sliding_controller.slx  DesignVars.mat  ExampleHelperSimulationRateControl.m  PDController.slx  PD_controller_setup.m  calling_test.slx  calling_test.tgz  comm_test.slx  forward_kinimatics_leg.m  init_with_opt_gains.m  myCustomRequirement.m  myStateTransitionFcn.m  set_up01.mat  simple_PD.tgz  sliding_controller.slx  sliding_controller2.slx  sliding_controller2.tgz  sliding_controller2_sfun.mexa64  sliding_controller_const.slx  sliding_controller_const.tgz  sliding_controller_const_sfun.mexa64  sliding_controller_init.m  testing.slx  trying01.m  trying02.m  weird_test.m
matlab/no_ambf_test/: PD_const.mat  PD_cost.m  PD_rbdl.slx  PD_rbdl_sfun.mexa64  PD_start.m  error_output.txt  forward_kinimatics_leg.m  ilqr_tau.csv  joint_accel.csv  myCustomRequirement.m  read_test.slx  run_servers.py  sliding_controller2.tgz  sliding_controller2_sfun.mexa64  sliding_controller_rbdl.slx  sliding_controller_rbdl_sfun.mexa64  temp.m  trying01.m  trying02.m  ts_obj.mat
matlab/simple_PD_controller/: ExampleHelperSimulationRateControl.m  init_PD_Controller.m  simple_PD.slx  simple_PD.tgz
matlab/simple_PD_ert_rtw/: CMakeLists.txt  MW_target_hardware_resources.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  ert_main.cpp  main.cpp  modelsources.txt  rosModelInfo.mat  rosnodeinterface.cpp  rosnodeinterface.h  rtmodel.h  rtwtypes.h  rtwtypeschksum.mat  simple_PD.cpp  simple_PD.h  simple_PD_data.cpp  simple_PD_private.h  simple_PD_types.h  slros_initialize.cpp
matlab/sliding_controller2_ert_rtw/: CMakeLists.txt  MW_custom_RTOS_header.h  MW_target_hardware_resources.h  buildInfo.mat  build_exception.mat  codeInfo.mat  compileInfo.mat  defines.txt  ert_main.cpp  main.cpp  multiword_types.h  rosModelInfo.mat  rosnodeinterface.cpp  rosnodeinterface.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  rtwtypeschksum.mat  sliding_controller2.cpp  sliding_controller2.h  sliding_controller2_data.cpp  sliding_controller2_dt.h  sliding_controller2_private.h  sliding_controller2_targ_data_map.m  sliding_controller2_types.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
matlab/sliding_controller2_grt_rtw/: builtin_typeid_types.h  defines.txt  modelsources.txt  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtwtypes.h  sliding_controller2.c  sliding_controller2.h  sliding_controller2_data.c  sliding_controller2_private.h  sliding_controller2_types.h
matlab/sliding_controller_const_ert_rtw/: CMakeLists.txt  MW_target_hardware_resources.h  buildInfo.mat  build_exception.mat  codeInfo.mat  compileInfo.mat  defines.txt  ert_main.cpp  main.cpp  modelsources.txt  rosModelInfo.mat  rosnodeinterface.cpp  rosnodeinterface.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  rtwtypeschksum.mat  sliding_controller_const.cpp  sliding_controller_const.h  sliding_controller_const_data.cpp  sliding_controller_const_private.h  sliding_controller_const_targ_data_map.m  sliding_controller_const_types.h  slros_initialize.cpp  (+3 more)
msg/: DesiredPosCmd.msg
src/: CooP_controller_server.cpp  DynController.cpp  c_test_server.cpp  controller_server.cpp  dynamic_server.cpp  exo_controller_server.cpp  exohuman_controller_server.cpp  lumped_controller_server.cpp  lumped_with_mass_server.cpp  perfecthuman_controller_server.cpp  rotate_point_cloud.cpp
srv/: DesiredJointsCmd.srv
(+913 files in other folders)
